# easter

./: 26c781998bae735d.module.wasm  3rdpartylicenses.txt  404.html  549.496ae61739f84e38.js  875.f41189a9806f5261.js  Cargo.toml  README.md  angular.json  fff41c514aa5dc02.module.wasm  index.html  main.0672081b41b6d937.js  main.9b8015797ad28e15.js  main.9e2e01f23a435b50.js  main.f304b3ce66fd53da.js  manifest.webmanifest  ngsw.json  package-lock.json  package.json  polyfills.279f4d7999741415.js  polyfills.40f00cb32e155f9c.js  polyfills.68f3561245e20e30.js  polyfills.6a73cefe28269bf4.js  polyfills.78dc20a133f1b8f5.js  polyfills.981acd4a6cbeb8be.js  polyfills.aad561477d8c21b6.js  polyfills.ab19335c10f65d9e.js  polyfills.b7325d3f26b01999.js  polyfills.cb955f82b23a9edc.js  polyfills.e6956341ec8ed1e4.js  polyfills.ed3a13447b3d4c54.js  polyfills.f2370d38e42b8db4.js  runtime.08b0d597dd2d338f.js  runtime.130eeb6d66ee263b.js  runtime.1763586d13b37d08.js  runtime.286ea004c51aaab1.js  runtime.64decf8feb7f0cba.js  runtime.8dbe39ab489486a4.js  runtime.944271b7c38491d6.js  runtime.cd8e846b33879c57.js  styles.035ab3624f64270a.css  (+10 more)
pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_test.d.ts  wasm_test.js  wasm_test_bg.js  wasm_test_bg.wasm  wasm_test_bg.wasm.d.ts
src/: index.html  lib.rs  manifest.webmanifest  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  safe.pipe.ts  time.service.ts
src/app/bible-verse/: bible-verse.component.html  bible-verse.component.scss  (+2 more)
(+16 files in other folders)
