[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3


[profile.dev]
lto = true
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.83"
serde = "1.0.130"
serde_json = "1.0.66"
#console_log = "0.2.0"
rand = "0.8.4"
# Below is necessary for random to work with wasm
getrandom = { version = "0.2.3", features = ["js"] }
time = { version = "0.3", features = ["macros"] }
